--- a/src/app/private/pages/gestion-mesa/agregar-editar-pedido/agregar-editar-pedido.component.html
+++ b/src/app/private/pages/gestion-mesa/agregar-editar-pedido/agregar-editar-pedido.component.html
@@ -1,1 +1,32 @@
-<p>agregar-editar-pedido works!</p>
+<div class="modal modal-lg fade show" id="exampleModalLive" tabindex="-1" style="display: block;">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">{{this.titulo}} Pedido a Mesa</h2>
+                <button type="button" class="btn-close" (click)="CerrarModal()"></button>
+            </div>
+            <div class="modal-body">
+                <form [formGroup]="formulario">
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">Nro. Serie: </label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="desc" formControlName="nombre" required>
+                        </div>
+                        <label for="desc" class="col-sm-3 col-form-label">Nro. Correlativo: </label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" id="desc" formControlName="nombre" required>
+                        </div>
+                    </div>
+                    <hr>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn" style="background-color: var(--color-principal); color: white;"
+                    (click)="CerrarModal()">Cancelar</button>
+                <button type="button" class="btn" [ngClass]="{'disabled': null}"
+                    style="background-color: var(--color-terciario); color: var(--color-principal);"
+                    (click)="AccionGuardar()">Guardar</button>
+            </div>
+        </div>
+    </div>
+</div>
