--- a/src/app/private/pages/layout/layout.component.scss
+++ b/src/app/private/pages/layout/layout.component.scss
@@ -5,7 +5,7 @@
 }
 
 #navBar {
-    transition: all 0.9s ease-in-out;
+    transition: transform 0.9s ease-in-out, opacity 0.9s ease-in-out;
 }
 
 .informacion-usuario {
