--- a/src/app/private/pages/gestion-mesa/agregar-cliente/agregar-cliente.component.html
+++ b/src/app/private/pages/gestion-mesa/agregar-cliente/agregar-cliente.component.html
@@ -1,23 +1,81 @@
-<!-- <div class="modal modal-lg fade show" id="exampleModalLive" tabindex="-1" style="display: block;">
+<div class="modal fade show" id="exampleModalLive" tabindex="-1" style="display: block;">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="modal-title">{{this.titulo}} Pedido a Mesa</h2>
+                <h2 class="modal-title">{{this.titulo}} Cliente</h2>
                 <button type="button" class="btn-close" (click)="CerrarModal()"></button>
             </div>
             <div class="modal-body">
                 <form [formGroup]="formulario">
                     <div class="mb-3 row">
-                        <label for="desc" class="col-sm-3 col-form-label">Nro. Serie: </label>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control" id="desc" formControlName="nroSerie"
-                                [disabled]="true">
+                        <label for="tipDoc" class="col-sm-3 col-form-label">Tipo Documento: </label>
+                        <div class="col-sm-9">
+                            <select class="form-select" formControlName="tipDoc" id="tipDoc"
+                                aria-label="Default select example">
+                                <option value="0" disabled selected>Seleccione</option>
+                                <option value="1">DNI</option>
+                                <option value="2">Carnet de Extranjeria</option>
+                                <option value="3">Pasaporte</option>
+                            </select>
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label for="desc" class="col-sm-3 col-form-label">Nro. Documento: </label>
-                        <div class="col-sm-3">
-                            <input type="text" class="form-control" id="desc" formControlName="nroDoumento" required>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="desc" formControlName="nroDoc">
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">Nombre: </label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="desc" formControlName="nombre" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">Apellido Paterno: </label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="desc" formControlName="apePat" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">Apellido Materno: </label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="desc" formControlName="apeMat" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">Direccion: </label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="desc" formControlName="direc" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">Direccion entrega: </label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" id="desc" formControlName="direcEntr" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label for="desc" class="col-sm-3 col-form-label">¿Persona juridica? </label>
+                        <div class="col-sm-9 form-check form-switch">
+                            <!-- <label class="form-check-label" for="switchCheckDefault">¿Desea RUC?</label> -->
+                            <input class="form-check-input" type="checkbox" role="switch" id="switchCheckDefault"
+                                formControlName="isJuridica">
+                        </div>
+                    </div>
+                    <div *ngIf="this.formulario.get('isJuridica')?.value == 1">
+                        <hr>
+                        <div class="mb-3 row">
+                            <label for="desc" class="col-sm-3 col-form-label">RUC: </label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="desc" formControlName="ruc" required>
+                            </div>
+                        </div>
+                        <div class="mb-3 row">
+                            <label for="desc" class="col-sm-3 col-form-label">Razon Social: </label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" id="desc" formControlName="razSoc" required>
+                            </div>
                         </div>
                     </div>
                 </form>
@@ -32,4 +90,4 @@
             </div>
         </div>
     </div>
-</div> -->
+</div>
