--- a/src/app/private/pages/gestion-mesa/agregar-editar-pedido/agregar-editar-pedido.component.html
+++ b/src/app/private/pages/gestion-mesa/agregar-editar-pedido/agregar-editar-pedido.component.html
@@ -10,27 +10,33 @@
                     <div class="mb-3 row">
                         <label for="desc" class="col-sm-3 col-form-label">Nro. Serie: </label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="desc" formControlName="nroSerie" [disabled]="true">
+                            <input type="text" class="form-control" id="desc" formControlName="nroSerie"
+                                [disabled]="true">
                         </div>
                         <label for="desc" class="col-sm-3 col-form-label">Nro. Correlativo: </label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="desc" formControlName="nroCorre"  [disabled]="true">
+                            <input type="text" class="form-control" id="desc" formControlName="nroCorre"
+                                [disabled]="true">
                         </div>
                     </div>
                     <div class="mb-3 row">
                         <label for="desc" class="col-sm-3 col-form-label">Nro. Documento: </label>
                         <div class="col-sm-3">
-                            <input type="text" class="form-control" id="desc" formControlName="nroDoumento" (blur)="BuscarCliente()" required>
+                            <input type="text" class="form-control" id="desc" formControlName="nroDoumento"
+                                (blur)="BuscarCliente()" required>
                         </div>
                         <label for="desc" class="col-sm-1 col-form-label">Cliente: </label>
                         <div class="col-sm-4">
-                            <input type="text" class="form-control" id="desc" formControlName="nombre"  [disabled]="true">
+                            <input type="text" class="form-control" id="desc" formControlName="nombre"
+                                [disabled]="true">
                         </div>
                         <div class="col-sm-1">
-                            <button class="btn"
-                                style="background-color: var(--color-principal);"
-                                (click)="null">
-                                <i class="bi bi-plus-lg" style="color: var(--color-terciario);"></i>
+                            <button class="btn" style="background-color: var(--color-principal);"
+                                (click)="RegistrarCliente()">
+                                <i class="bi bi-plus-lg" style="color: var(--color-terciario);"
+                                    *ngIf="this.clienteAsignado.id == 0"></i>
+                                <i class="bi bi-eye-fill" style="color: var(--color-terciario);"
+                                    *ngIf="this.clienteAsignado.id != 0"></i>
                             </button>
                         </div>
                     </div>
@@ -62,68 +68,54 @@
                             <input type="number" class="form-control" id="desc" formControlName="cantidad">
                             <label for="idCategoria">Cantidad...</label>
                         </div>
-                        <div class="form-floating col-xs-4 col-sm-8 col-md-2 col-xl-2 d-flex justify-content-end align-items-end">
+                        <div
+                            class="form-floating col-xs-4 col-sm-8 col-md-2 col-xl-2 d-flex justify-content-end align-items-end">
                             <button class="btn"
                                 style="height: 58px; width:  58px; background-color: var(--color-principal);"
-                                (click)="null">
+                                (click)="AgregarDetallePedido()">
                                 <i class="bi bi-plus-lg" style="color: var(--color-terciario);"></i>
                             </button>
                         </div>
                     </div>
                 </form>
 
-                <!-- <section>
+                <section>
                     <div class="mat-elevation-z8" style="overflow-x: auto;">
                         <table mat-table [dataSource]="dataSource">
                             <ng-container matColumnDef="Nro">
                                 <th mat-header-cell *matHeaderCellDef> No. </th>
-                                <td mat-cell *matCellDef="let element"> {{pisos.indexOf(element) + 1}} </td>
+                                <td mat-cell *matCellDef="let element"> {{detallesDePedido.indexOf(element) + 1}} </td>
                             </ng-container>
 
-                            <ng-container matColumnDef="Id">
-                                <th mat-header-cell *matHeaderCellDef> Id </th>
-                                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+                            <ng-container matColumnDef="Plato">
+                                <th mat-header-cell *matHeaderCellDef> Plato </th>
+                                <td mat-cell *matCellDef="let element"> {{element.nombrePlato}} </td>
                             </ng-container>
 
-                            <ng-container matColumnDef="Numero">
-                                <th mat-header-cell *matHeaderCellDef> Numero </th>
-                                <td mat-cell *matCellDef="let element"> {{element.numero}} </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="Capacidad">
-                                <th mat-header-cell *matHeaderCellDef> Capacidad </th>
-                                <td mat-cell *matCellDef="let element"> {{element.capacidad}} </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="Piso">
-                                <th mat-header-cell *matHeaderCellDef> Piso </th>
-                                <td mat-cell *matCellDef="let element"> {{element.piso}} </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="Sucursal">
-                                <th mat-header-cell *matHeaderCellDef> Sucursal </th>
-                                <td mat-cell *matCellDef="let element"> {{element.sucursal}} </td>
-                            </ng-container>
-
-                            <ng-container matColumnDef="Estado">
-                                <th mat-header-cell *matHeaderCellDef> Estado </th>
-                                <td mat-cell *matCellDef="let element"> {{element.estado}} </td>
+                            <ng-container matColumnDef="Cantidad">
+                                <th mat-header-cell *matHeaderCellDef> Cantidad </th>
+                                <td mat-cell *matCellDef="let element">
+                                    <div class="btn-group btn-group-sm" role="group" aria-label="Small button group">
+                                        <button type="button" class="btn btn-outline-primary"
+                                            style="background-color: var(--color-principal); color: white; border: var(--color-principal);"
+                                            (click)="element.cantidad = element.cantidad - 1">-</button>
+                                        <button type="button" class="btn btn-outline-primary" disabled
+                                            style="background-color: var(--color-terciario); color: black; border: var(--color-principal);">
+                                            {{element.cantidad}}
+                                        </button>
+                                        <button type="button" class="btn btn-outline-primary"
+                                            style="background-color: var(--color-principal); color: white; border: var(--color-principal);"
+                                            (click)="element.cantidad = element.cantidad + 1">+</button>
+                                    </div>
+                                </td>
                             </ng-container>
 
                             <ng-container matColumnDef="Accion">
                                 <th mat-header-cell *matHeaderCellDef> Acciones </th>
                                 <td mat-cell *matCellDef="let element">
-                                    <button class="btn m-1" (click)="EditarMesa(element.id)" title="Editar"
+                                    <button class="btn" (click)="EliminarDetallePedido(element)" title="Eliminar"
                                         style="background-color: var(--color-principal); color: var(--color-terciario);">
-                                        <i class="bi bi-pencil-square"></i>
-                                    </button>
-                                    <button class="btn" (click)="EliminarMesa(element.id)" title="Eliminar"
-                                        style="background-color: var(--color-principal); color: var(--color-terciario);">
-                                        <i class="bi bi-trash"
-                                            *ngIf="element.estado.substring(0, 1) == 'A'; else icono_else"></i>
-                                        <ng-template #icono_else>
-                                            <i class="bi bi-check-circle"></i>
-                                        </ng-template>
+                                        <i class="bi bi-trash"></i>
                                     </button>
                                 </td>
                             </ng-container>
@@ -132,11 +124,11 @@
                             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                         </table>
 
-                        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons
+                        <mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons
                             aria-label="Select page of periodic elements">
                         </mat-paginator>
                     </div>
-                </section> -->
+                </section>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn" style="background-color: var(--color-principal); color: white;"
