--- a/src/app/public/pages/login/login.component.html
+++ b/src/app/public/pages/login/login.component.html
@@ -1,33 +1,37 @@
 <section class="main">
-    <div class="flotante position-absolute top-50 start-50 translate-middle">
-        <div class="container bg-white position-relative p-4 rounded-4">
-            <div class="logo-img rounded-circle translate-middle">
-                <picture>
-                    <source media="(max-width: 650px)" srcset="logo_bg_mobile.webp">
-                </picture>
-                <!-- <img class="w-100" src="img/Logo.png" alt="Logo"> -->
+    <div class="overlay position-absolute w-100 h-100 bg-black opacity-50"></div>
+    <picture>
+        <source media="(max-width: 650px)" srcset="img/login_bg_mobile.webp">
+        <source media="(min-width: 650px)" srcset="img/login_bg_desktop.webp">
+        <img class="bg-image" src="img/login_bg_desktop.webp" alt="BG">
+    </picture>
+    <div class="floating-modal w-100 p-4 position-absolute top-50 start-50 translate-middle">
+        <div class="bg-white position-relative p-4 rounded-4">
+            <div class="logo-img rounded-circle translate-middle p-2">
+                <img class="w-100" src="img/Logo.png" alt="Logo">
             </div>
-            <div class="container d-flex flex-column justify-content-center align-items-center"
-                style="flex: 1; background-color: var(--color-terciario);">
-                <form [formGroup]="formulario">
+            <div class="form-container">
+                <form [formGroup]="formulario" (ngSubmit)="onSubmit()">
                     <div class="form-floating mb-3">
                         <h2>Iniciar Sesion</h2>
                     </div>
                     <div class="form-floating mb-3">
-                        <input type="email" class="form-control" id="correo" placeholder="name@example.com"
-                            style="width: 45vh;" formControlName="correo">
+                        <input type="email" class="form-control" id="correo" placeholder="name@example.com" formControlName="correo">
                         <label for="correo">Correo Electronico</label>
                     </div>
-                    <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="clave" placeholder="Clave" style="width: 45vh;"
-                            formControlName="clave">
-                        <label for="clave">Clave</label>
+                    <div class="input-group mb-3">
+                        <div class="form-floating">
+                            <input [type]="showPassword ? 'text' : 'password'" class="form-control border-end-0" id="clave" placeholder="Clave"
+                                formControlName="clave">
+                            <label for="clave">Contraseña</label>
+                        </div>
+                        <button class="btn btn-white border border-start-0" type="button" (click)="showPassword = !showPassword">
+                            <i [classList]="['text-secondary','bi','bi-' + (showPassword ? 'eye' : 'eye-slash')].join(' ')"></i>
+                        </button>
                     </div>
                     <div class="form-floating">
-                        <button type="button" class="btn-lg btn btn-primary"
-                            style="background-color: var(--color-principal); border-color: var(--color-terciario);"
-                            (click)="ValidarInicioSesion()" [disabled]="formulario.invalid">
-                            Iniciar Sesion
+                        <button type="submit" class="btn-lg btn w-100" [disabled]="formulario.invalid">
+                            Ingresar
                         </button>
                     </div>
                 </form>
